--- a/css/styles.compact.css
+++ b/css/styles.compact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@300&family=Roboto&display=swap");
 * { margin: 0; padding: 0; }
 
-html { box-sizing: border-box; }
+html { box-sizing: border-box; background-color: #1d1d1d; }
 
 *, *:after, *:before { box-sizing: inherit; }
 
@@ -20,17 +20,19 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 
 #menu ul { list-style: none; padding: 0; margin: 0; }
 
-#menu li { display: inline-block; padding: 1em; font-size: 24px; padding: 25px; font-family: 'Roboto', sans-serif; transition: all ease-in-out .2s; }
+#menu li { display: inline-block; font-size: 24px; padding: 25px; font-family: 'Roboto', sans-serif; }
 
 #menu a { text-decoration: none; color: #fff; }
 
+#menu a:hover { color: #12fcd8; }
+
 #menu ul:last-child { margin-right: 72px; }
 
-#menu li::before { transition: 300ms; height: 5px; content: ""; position: absolute; background-color: #031D44; }
+#menu a::before { transition: 300ms; height: 5px; content: ""; position: absolute; }
 
-.btm-underline::before { width: 0; bottom: 10px; }
+#menu a::before { width: 0; bottom: 10px; }
 
-.btm-underline:hover::before { width: 100%; }
+#menu a:hover::before { width: 100%; }
 
 #ham-btn-cta { display: none; }
 
@@ -41,26 +43,26 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 .logo { flex: 1 1 50%; }
 
 /* ----------photo-PORFOLIO------------- */
-#main { display: block; padding-bottom: 2em; background-color: linear-gradient(271deg, #333, #080909); background-size: 400% 400%; -webkit-animation: AnimationName 24s ease infinite; -moz-animation: AnimationName 24s ease infinite; animation: AnimationName 60s ease infinite; background-image: url("../image/frost.png"); background-position: right; background-size: cover; background-repeat: no-repeat; background-color: #1d1d1d; overflow: hidden; position: relative; }
+#main { padding-bottom: 2em; -webkit-animation: glowLines 24s ease infinite; -moz-animation: glowLines 24s ease infinite; animation: glowLines 60s ease infinite; background-image: url("../image/frost.png"); background-position: right; background-size: cover; background-repeat: no-repeat; background-color: #1d1d1d; overflow: hidden; position: relative; }
 
-@-webkit-keyframes AnimationName { 0% { background-position: 0 47%; }
+@-webkit-keyframes glowLines { 0% { background-position: 0 47%; }
   50% { background-position: 100% 54%; }
   100% { background-position: 0 47%; } }
 
-@-moz-keyframes AnimationName { 0% { background-position: 0 47%; }
+@-moz-keyframes glowLines { 0% { background-position: 0 47%; }
   50% { background-position: 100% 54%; }
   100% { background-position: 0 47%; } }
 
-@keyframes AnimationName { 0% { background-position: 0 47%; }
+@keyframes glowLines { 0% { background-position: 0 47%; }
   50% { background-position: 100% 54%; }
   100% { background-position: 0 47%; } }
 
 .circle { width: 100%; height: 100%; background: #1d1d1d; filter: blur(10px); position: absolute; border-radius: 80%; animation: grow 15s ease infinite alternate; overflow: hidden; }
 
 @keyframes grow { 0% { transform: scale(3); }
-  20% { transition: scale(2); }
-  50% { transition: scale(0.9); }
-  100% { transition: scale(0.3); } }
+  20% { transform: scale(2); }
+  50% { transform: scale(0.9); }
+  100% { transform: scale(0.3); } }
 
 .image-self img { max-width: 400px; }
 
@@ -138,25 +140,36 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 
 @media screen and (max-width: 934px) { .main-flex { flex-direction: column-reverse; justify-content: center; }
   .image-self { flex: 1 0 0; order: 1; }
-  .image-self img { width: 100%; padding-left: 12%; } }
+  .image-self img { width: 100vw; padding-left: 12%; } }
 
 /* ----------ABOUT ME SECTION------------- */
 #about-section { background-color: #013A6B; background-image: -webkit-linear-gradient(-30deg, #1d1d1d 50%, #222 50%); }
 
-.about-head { flex: 1 0 0; order: -1; margin-left: 12%; z-index: 99; align-items: center; }
+.about-flex { display: flex; flex-flow: row; padding: 5% 0; }
+
+.about-image-self { margin-left: 5%; }
+
+.about-image-self img { width: 350px; border-radius: 200px 50px 200px; transform: rotate(-10deg); }
+
+.about-image-self img:hover { filter: sepia(50%); }
+
+.about-head { margin: 10%; }
+
+@media screen and (max-width: 884px) { .about-flex { flex-flow: column wrap; align-items: center; }
+  .about-image-self img { width: 70vw; transform: rotate(0deg); } }
 
 /* ----------SKILLS SECTION------------- */
 #skills-section { position: relative; background-image: url("../image/glen-carsten-unplash.jpg"); background-position: right; background-size: cover; background-repeat: no-repeat; background-color: #201e1e; }
 
 .skill-flex { display: flex; flex-flow: row wrap; align-items: center; gap: 4%; padding: 5%; }
 
-.skill-heading h2 { text-align: right; font-size: 3em; padding-top: 1em; padding-right: 3em; color: #12fcd8; }
+.skill-heading h2 { text-align: right; font-size: 3em; padding: 8%; color: #12fcd8; }
 
-.front-container { width: 227px; height: 300px; position: relative; font-size: 0.9em; background-color: #3f4042; padding: 0.5em; opacity: 0.80; color: #fff; }
+.front-container { width: 227px; height: 300px; position: relative; font-size: 0.8em; background-color: #3f4042; padding: 2%; opacity: 0.80; color: #fff; }
 
 .backend-container h3, .front-container h3 { margin-bottom: 0.5em; }
 
-.backend-container { width: 227px; height: 300px; position: relative; background-color: #3f4042; font-size: 0.9em; padding: 0.5em; opacity: 0.80; color: #fff; }
+.backend-container { width: 227px; height: 300px; position: relative; background-color: #3f4042; font-size: 0.8em; padding: 2%; opacity: 0.80; color: #fff; }
 
 .backend-container h3, .front-container h3 { font-size: 20px; text-align: center; padding-top: 15%; }
 
@@ -174,27 +187,27 @@ ul.skill-list { margin: 0; }
 #features-section { background-color: #013A6B; background-image: -webkit-linear-gradient(-180deg, #1d1d1d 50%, #222 50%); position: relative; }
 
 /* FEATURE TEST */
-.col-text { minheight: 20em; }
+.col-text { min-height: 20em; }
 
-.col img { width: 80%; margin: 2%; }
+.col img { width: 500px; padding-left: 15%; }
 
-.grid-flex { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; flex-direction: row; -webkit-flex-direction: row; -webkit-flex-wrap: wrap; -webkit-justify-content: space-around; border-block: 2px solid #fff; margin: 2% 0; padding: 2% auto; }
+.grid-flex { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -webkit-flex-grow: 1; flex-direction: row; -webkit-flex-direction: row; -webkit-flex-wrap: wrap; justify-content: space-evenly; border-block: 2px solid #fff; margin: 2% 0; }
 
 .grid-flex:last-of-type { margin-bottom: 0; }
 
 .col { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
 
-.col-left { -webkit-box-ordinal-group: -1; -webkit-order: -1; -ms-flex-order: -1; order: -1; }
+.col-left { -ms-flex-order: -1; order: -1; }
 
-.col-text { display: flex; align-items: center; justify-content: center; padding: 3%; }
+.col-text { display: flex; align-items: center; justify-content: center; }
 
 .aligner-item { width: 60%; }
 
-@media (max-width: 600px) { .grid-flex { display: flex; -webkit-flex-direction: column; flex-direction: column; justify-content: center; }
-  .col { order: vertical; }
-  .col-left { -webkit-box-ordinal-group: 0; -webkit-order: 0; -ms-flex-order: 0; order: 0; }
+@media (max-width: 750px) { .grid-flex { display: flex; -webkit-flex-direction: column; flex-direction: column; align-items: center; }
+  .col-left { -webkit-box-ordinal-group: 0; -ms-flex-order: 0; order: 0; }
   .col-text div p { padding: 1em; }
-  .aligner-item { width: 90%; } }
+  .aligner-item { width: 100%; }
+  .col img { width: 100%; padding: 2%; } }
 
 /* ----------CONTACT FORM------------- */
 #contact-section { background-color: #013A6B; background-image: -webkit-linear-gradient(30deg, #1d1d1d 50%, #222 50%); }
@@ -233,13 +246,14 @@ form .form-row .textarea { height: 70px; }
 
 .input-data .underline { position: absolute; bottom: 0; height: 2px; width: 100%; }
 
-.form-btn input[type="submit"] { font-size: 17px; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; cursor: pointer; padding: 1em; width: 35%; text-align: center; border: 2px solid #12fcd8; background-color: #1d1d1d; color: #12fcd8; }
+.form-btn input[type="submit"] { font-size: 16px; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; cursor: pointer; padding: 0.5em 1em; width: 35%; margin-left: 2%; text-align: center; border: 2px solid #12fcd8; background-color: #1d1d1d; color: #12fcd8; }
+
+.form-btn input[type="submit"]:hover { transform: scale(1.1); }
 
 @media (max-width: 700px) { .container .text { font-size: 20px; }
   .input-data input, .textarea textarea { display: block; width: 100%; height: 100%; border: 2px solid #000; font-size: 17px; background: #fff; }
   .container form { padding: 10px 0; }
   .container form .form-row { display: block; }
-  form .form-row input-data { margin: 20px 0 !important !important; }
   .row-block { margin-top: 15px; }
   .submit-btn .input-data { width: 40% !important; } }
 
@@ -248,6 +262,8 @@ form .form-row .textarea { height: 70px; }
 .icons { display: flex; justify-content: space-evenly; padding-bottom: 4%; }
 
 .icons a i { font-size: 3em; color: #12fcd8; }
+
+@media (max-width: 572px) { .contact-heading h2, .feature-heading h2, .skill-heading h2 { text-align: center; padding: 8% 0; font-size: 2.5em; } }
 
 @media (max-width: 513px) { .social-icon { display: none; } }
 
@@ -260,7 +276,7 @@ form .form-row .textarea { height: 70px; }
 
 .menu-footer ul { list-style: none; padding: 0; margin: 0; }
 
-.menu-footer li { display: inline-block; padding: 1em; font-size: 24px; padding: 25px; font-family: 'Roboto', sans-serif; }
+.menu-footer li { display: inline-block; font-size: 24px; padding: 25px; font-family: 'Roboto', sans-serif; }
 
 .menu-footer a { text-decoration: none; color: #fff; }
 
