--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,6 +7,7 @@
 
 html {
   box-sizing: border-box;
+  background-color: #1d1d1d;
 }
 
 *,
@@ -40,13 +41,13 @@ h2 {
 }
 /* ----------HEADER-NAVIGATION------------- */
 #header {
-  position:sticky;
+  position: sticky;
   z-index: 1;
   background: #1d1d1d;
   -webkit-box-shadow: 0 8px 6px -6px #12fcd8;
   -moz-box-shadow: 0 8px 6px -6px #12fcd8;
   box-shadow: 0 8px 6px -6px #12fcd8;
-  // transition: all 0.3s ease;
+
   .nav-flex {
     display: flex;
     flex-direction: row;
@@ -62,39 +63,39 @@ h2 {
 
 #menu li {
   display: inline-block;
-  padding: 1em;
+  //padding: 1em;
   font-size: 24px;
   padding: 25px;
   font-family: 'Roboto', sans-serif;
-  transition: all ease-in-out .2s;
-
+  //transition: all ease-in-out .2s;
 }
-
-
 
 #menu a {
   text-decoration: none;
   color: #fff;
+
+  &:hover {
+    color: #12fcd8;
+  }
 }
 
 #menu ul:last-child {
   margin-right: 72px;
 }
 
-#menu li::before {
+#menu a::before {
   transition: 300ms;
   height: 5px;
   content: "";
   position: absolute;
-  background-color: #031D44;
 }
 
-.btm-underline::before {
+#menu a::before {
   width: 0;
   bottom: 10px;
 }
 
-.btm-underline:hover::before {
+#menu a:hover::before {
   width: 100%;
 }
 
@@ -115,25 +116,19 @@ h2 {
 }
 /* ----------photo-PORFOLIO------------- */
 #main {
-  // background-color: #201e1e;
-  display: block;
   padding-bottom: 2em;
-  background-color: linear-gradient(271deg, #333, #080909);
-  background-size: 400% 400%;
-  -webkit-animation: AnimationName 24s ease infinite;
-  -moz-animation: AnimationName 24s ease infinite;
-  animation: AnimationName 60s ease infinite;
+  -webkit-animation: glowLines 24s ease infinite;
+  -moz-animation: glowLines 24s ease infinite;
+  animation: glowLines 60s ease infinite;
   background-image: url("../image/frost.png");
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color:  #1d1d1d;
+  background-color: #1d1d1d;
   overflow: hidden;
   position: relative;
-
-
 }
-@-webkit-keyframes AnimationName {
+@-webkit-keyframes glowLines {
   0% {
     background-position: 0 47%;
   }
@@ -146,7 +141,7 @@ h2 {
     background-position: 0 47%;
   }
 }
-@-moz-keyframes AnimationName {
+@-moz-keyframes glowLines {
   0% {
     background-position: 0 47%;
   }
@@ -159,7 +154,7 @@ h2 {
     background-position: 0 47%;
   }
 }
-@keyframes AnimationName {
+@keyframes glowLines {
   0% {
     background-position: 0 47%;
   }
@@ -172,41 +167,38 @@ h2 {
     background-position: 0 47%;
   }
 }
-.circle{
+
+.circle {
   width: 100%;
   height: 100%;
-  background:  #1d1d1d;
+  background: #1d1d1d;
   filter: blur(10px);
   position: absolute;
-
-  // left: 40%;
-  // top: 50%;
   border-radius: 80%;
   animation: grow 15s ease infinite alternate;
- overflow: hidden;
+  overflow: hidden;
 }
-
 @keyframes grow {
-0%{
-  transform: scale(3);
-}
-20%{
-  transition: scale(2);
-}
-50%{
-    transition: scale(0.9);
-}
-100%{
-  transition: scale(0.3);
-}
+  0% {
+    transform: scale(3);
+  }
 
+  20% {
+    transform: scale(2);
+  }
+
+  50% {
+    transform: scale(0.9);
+  }
+
+  100% {
+    transform: scale(0.3);
+  }
 }
 
 .image-self img {
   max-width: 400px;
 }
-
-.image-self:hover {}
 /* ----------MAIN-CONTENT-INFO------------- */
 // ABOUT SECTION
 
@@ -270,7 +262,6 @@ h2 {
   margin-left: 25%;
 }
 
-
 .line:nth-child(4)::after {
   -webkit-animation-delay: 2.5s;
   animation-delay: 2.5s;
@@ -298,7 +289,7 @@ h2 {
   animation: bounce 3s both ease-in-out infinite;
 }
 
-.name-span{
+.name-span {
   animation: bounce 3s both ease-in-out infinite;
 }
 @keyframes bounce {
@@ -390,7 +381,6 @@ h2 {
   flex: 1 0 0;
   order: 1;
   margin-top: 10%;
-  // margin-right: 4%;
   margin-bottom: 5%;
   z-index: 999;
 }
@@ -416,7 +406,6 @@ h2 {
   border-radius: 50%;
   border: 10px solid #201e1e;
   background: #201e1e;
-  // font-size: 24px;
   box-shadow: inset -2px -2px 2px #fff, inset 1px 1px 1px #fff;
 
   &:hover {
@@ -442,16 +431,12 @@ h2 {
   left: 50%;
   bottom: 3%;
 
-&:hover {
+  &:hover {
     transform: scale(1.2);
   }
 }
-
 @media screen and (max-width:934px) {
   .main-flex {
-    // display: block;
-    // flex-flow: row wrap;
-    // flex-wrap:wrap-reverse;
     flex-direction: column-reverse;
     justify-content: center;
   }
@@ -461,29 +446,51 @@ h2 {
     order: 1;
 
     img {
-      width: 100%;
+      width: 100vw;
       padding-left: 12%;
     }
   }
 }
-
 /* ----------ABOUT ME SECTION------------- */
-
-#about-section{
+#about-section {
   background-color: #013A6B;
   background-image: -webkit-linear-gradient(-30deg, #1d1d1d 50%, #222 50%);
 }
 
-.about-head {
-  flex: 1 0 0;
-  order: -1;
-  margin-left: 12%;
-  z-index: 99;
-  align-items: center;
-
+.about-flex {
+  display: flex;
+  flex-flow: row;
+  padding: 5% 0;
 }
 
+.about-image-self {
+  margin-left: 5%;
 
+  img {
+    width: 350px;
+    border-radius: 200px 50px 200px;
+    transform: rotate(-10deg);
+
+    &:hover {
+      filter: sepia(50%);
+    }
+  }
+}
+
+.about-head {
+  margin: 10%;
+}
+@media screen and (max-width:884px) {
+  .about-flex {
+    flex-flow: column wrap;
+    align-items: center;
+  }
+
+  .about-image-self img {
+    width: 70vw;
+    transform: rotate(0deg);
+  }
+}
 /* ----------SKILLS SECTION------------- */
 #skills-section {
   position: relative;
@@ -505,8 +512,7 @@ h2 {
 .skill-heading h2 {
   text-align: right;
   font-size: 3em;
-  padding-top: 1em;
-  padding-right: 3em;
+  padding: 8%;
   color: #12fcd8;
 }
 
@@ -514,9 +520,9 @@ h2 {
   width: 227px;
   height: 300px;
   position: relative;
-  font-size: 0.9em;
+  font-size: 0.8em;
   background-color: #3f4042;
-  padding: 0.5em;
+  padding: 2%;
   opacity: 0.80;
   color: #fff;
 }
@@ -531,14 +537,11 @@ h2 {
   height: 300px;
   position: relative;
   background-color: #3f4042;
-  font-size: 0.9em;
-  padding: 0.5em;
+  font-size: 0.8em;
+  padding: 2%;
   opacity: 0.80;
   color: #fff;
 }
-
-
-
 
 .backend-container h3,
 .front-container h3 {
@@ -587,17 +590,14 @@ ul.skill-list {
   background-image: -webkit-linear-gradient(-180deg, #1d1d1d 50%, #222 50%);
   position: relative;
 }
-
-
 /* FEATURE TEST */
 .col-text {
-  minheight: 20em;
+  min-height: 20em;
 }
 
-.col img{
-  width: 80%;
-  margin:2%;
-
+.col img {
+  width: 500px;
+  padding-left: 15%;
 }
 
 .grid-flex {
@@ -607,15 +607,12 @@ ul.skill-list {
   display: flex;
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
   flex-direction: row;
   -webkit-flex-direction: row;
   -webkit-flex-wrap: wrap;
-  -webkit-justify-content: space-around;
+  justify-content: space-evenly;
   border-block: 2px solid #fff;
   margin: 2% 0;
-  padding: 2% auto;
 }
 
 .grid-flex:last-of-type {
@@ -630,8 +627,6 @@ ul.skill-list {
 }
 
 .col-left {
-  -webkit-box-ordinal-group: -1;
-  -webkit-order: -1;
   -ms-flex-order: -1;
   order: -1;
 }
@@ -640,34 +635,21 @@ ul.skill-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3%;
 }
 
 .aligner-item {
   width: 60%;
 }
-
-
-
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .grid-flex {
-    // height: 40em;
     display: flex;
     -webkit-flex-direction: column;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
   }
-
-  .col {
-    order: vertical;
-
-
-   }
-
 
   .col-left {
     -webkit-box-ordinal-group: 0;
-    -webkit-order: 0;
     -ms-flex-order: 0;
     order: 0;
   }
@@ -677,16 +659,20 @@ ul.skill-list {
   }
 
   .aligner-item {
-    width: 90%;
-  }
+    width: 100%;
   }
 
-
+  .col img {
+    width: 100%;
+    padding: 2%;
+  }
+}
 /* ----------CONTACT FORM------------- */
-#contact-section{
+#contact-section {
   background-color: #013A6B;
   background-image: -webkit-linear-gradient(30deg, #1d1d1d 50%, #222 50%);
 }
+
 .wrap {
   display: flex;
   flex-flow: row-reverse wrap;
@@ -700,7 +686,6 @@ ul.skill-list {
   padding: 25px 25px 10px;
   color: #fff;
   border: 2px solid #b60782;
-  // background-color: #1d1d1d;
 }
 
 .container .text {
@@ -793,21 +778,23 @@ form .form-row .textarea {
   width: 100%;
 }
 
-
-
 .form-btn input[type="submit"] {
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
   cursor: pointer;
-  padding: 1em;
+  padding: 0.5em 1em;
   width: 35%;
+  margin-left: 2%;
   text-align: center;
-
   border: 2px solid #12fcd8;
   background-color: #1d1d1d;
   color: #12fcd8;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 @media (max-width: 700px) {
   .container .text {
@@ -822,26 +809,20 @@ form .form-row .textarea {
     border: 2px solid #000;
     font-size: 17px;
     background: #fff;
-
   }
 
   .container form {
-    padding: 10px 0 ;
-
+    padding: 10px 0;
   }
 
   .container form .form-row {
     display: block;
-
   }
 
-  form .form-row input-data  {
-    margin: 20px 0!important !important;
+  .row-block {
+    margin-top: 15px;
   }
 
-.row-block{
-  margin-top: 15px;
-}
   .submit-btn .input-data {
     width: 40%!important;
   }
@@ -854,23 +835,30 @@ form .form-row .textarea {
   color: #12fcd8;
 }
 
-.icons{
+.icons {
   display: flex;
   justify-content: space-evenly;
   padding-bottom: 4%;
-  a i{
+
+  a i {
     font-size: 3em;
     color: #12fcd8;
-
   }
-
 }
-
+@media (max-width: 572px) {
+  .contact-heading h2,
+  .feature-heading h2,
+  .skill-heading h2 {
+    text-align: center;
+    padding: 8% 0;
+    font-size: 2.5em;
+  }
+}
 @media (max-width: 513px) {
-  .social-icon{
+  .social-icon {
     display: none;
   }
-  }
+}
 /* ----------FOOTER------------- */
 #footer {
   clear: both;
@@ -900,7 +888,6 @@ form .form-row .textarea {
 
 .menu-footer li {
   display: inline-block;
-  padding: 1em;
   font-size: 24px;
   padding: 25px;
   font-family: 'Roboto', sans-serif;
@@ -977,7 +964,6 @@ i:hover {
 }
 @media screen and (max-width:1160px) {
   .wrap {
-    // flex-direction: column-reverse;
     justify-content: center;
     padding: 5%;
   }
@@ -994,7 +980,8 @@ i:hover {
   .skill-flex {
     justify-content: center;
   }
-  h2{
+
+  h2 {
     text-align: center;
   }
 
