form css update

--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,8 @@ h2 {
 
 .about-head {
   margin: 10%;
+  font-size: 1.2em;
+  line-height: 1.5em;
 }
 
 @media screen and (max-width: 884px) {
@@ -805,10 +807,13 @@ form .form-row .textarea {
     background: #fff;
   }
   .container form {
-    padding: 10px 0;
+    padding: 10px auto;
   }
   .container form .form-row {
     display: block;
+  }
+  .container form .form-row input[type="email"] {
+    margin: 15px 0;
   }
   .row-block {
     margin-top: 15px;
