--- a/css/styles.compact.css
+++ b/css/styles.compact.css
@@ -153,7 +153,7 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 
 .about-image-self img:hover { filter: sepia(50%); }
 
-.about-head { margin: 10%; }
+.about-head { margin: 10%; font-size: 1.2em; line-height: 1.5em; }
 
 @media screen and (max-width: 884px) { .about-flex { flex-flow: column wrap; align-items: center; }
   .about-image-self img { width: 70vw; transform: rotate(0deg); } }
@@ -252,8 +252,9 @@ form .form-row .textarea { height: 70px; }
 
 @media (max-width: 700px) { .container .text { font-size: 20px; }
   .input-data input, .textarea textarea { display: block; width: 100%; height: 100%; border: 2px solid #000; font-size: 17px; background: #fff; }
-  .container form { padding: 10px 0; }
+  .container form { padding: 10px auto; }
   .container form .form-row { display: block; }
+  .container form .form-row input[type="email"] { margin: 15px 0; }
   .row-block { margin-top: 15px; }
   .submit-btn .input-data { width: 40% !important; } }
 
