--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h2 {
 /* ----------HEADER-NAVIGATION------------- */
 #header {
   position: sticky;
-  z-index: 1;
+  z-index: 999;
   background: #1d1d1d;
   -webkit-box-shadow: 0 8px 6px -6px #12fcd8;
   -moz-box-shadow: 0 8px 6px -6px #12fcd8;
@@ -120,7 +120,6 @@ h2 {
   -moz-animation: glowLines 24s ease infinite;
   animation: glowLines 60s ease infinite;
   background-image: url("../image/frost.png");
-  background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #1d1d1d;
@@ -188,10 +187,6 @@ h2 {
   100% {
     transform: scale(0.3);
   }
-}
-
-.image-self img {
-  max-width: 400px;
 }
 
 /* ----------MAIN-CONTENT-INFO------------- */
@@ -309,35 +304,17 @@ h2 {
   }
 }
 
-.hastag {
-  border: 2px solid #fff;
-  background-color: #7f7575;
-  display: inline-block;
-  padding: 7px 20px;
-  border-radius: 5px;
-  margin: 12px;
-}
-
-.hastag a {
-  text-decoration: none;
-  font-size: 1em;
-  color: #fff;
-}
-
 .main-flex {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: flex-end;
-  z-index: 99;
 }
 
 .intro-head {
   flex: 1 0 0;
   order: -1;
   margin-left: 12%;
-  z-index: 99;
-  align-items: center;
+  z-index: 3;
 }
 
 .intro-head p {
@@ -375,7 +352,11 @@ h2 {
   order: 1;
   margin-top: 10%;
   margin-bottom: 5%;
-  z-index: 999;
+  z-index: 10;
+}
+
+.image-self img {
+  max-width: 400px;
 }
 
 .block {
@@ -410,13 +391,6 @@ h2 {
   border-color: #000;
 }
 
-.hastag-area {
-  position: relative;
-  left: 19%;
-  bottom: 250px;
-  display: inline-block;
-}
-
 .arrow i {
   font-size: 48px;
   color: #7f7575;
@@ -437,6 +411,7 @@ h2 {
   .image-self {
     flex: 1 0 0;
     order: 1;
+    z-index: 3;
   }
   .image-self img {
     width: 100vw;
@@ -591,6 +566,7 @@ ul.skill-list {
 /* FEATURE TEST */
 .col-text {
   min-height: 20em;
+  color: #fff;
 }
 
 .col img {
@@ -624,9 +600,15 @@ ul.skill-list {
   flex: 1;
 }
 
+.col h3 {
+  padding: 4% 0;
+  font-size: 1.5em;
+}
+
 .col-left {
   -ms-flex-order: -1;
   order: -1;
+  background-color: #1d1d1d;
 }
 
 .col-text {
@@ -637,6 +619,12 @@ ul.skill-list {
 
 .aligner-item {
   width: 60%;
+}
+
+@media (max-width: 998px) {
+  .col img {
+    padding-left: 0;
+  }
 }
 
 @media (max-width: 750px) {
@@ -681,7 +669,7 @@ ul.skill-list {
   max-width: 50%;
   padding: 25px 25px 10px;
   color: #fff;
-  border: 2px solid #b60782;
+  border: 2px solid #12fcd8;
 }
 
 .container .text {
@@ -919,27 +907,24 @@ i:hover {
   }
   #menu {
     display: none;
-    background-color: #1d1d1d;
+    background-color: #000;
     position: fixed;
-    z-index: 50;
+    z-index: 999;
     width: 60%;
     right: 0;
     height: 100vh;
     text-align: right;
   }
-  #mob-exit {
-    display: block;
-  }
   #menu li {
     display: block;
     border-bottom: 1px solid #fff;
   }
+  #mob-exit {
+    display: block;
+    z-index: 999;
+  }
   #ham-btn-cta {
     display: block;
-  }
-  .nav-flex {
-    display: flex;
-    flex-direction: row;
   }
   .hamburger {
     flex: 1 1 0;
