--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ html {
 body {
   margin: 0 auto;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .hidden {
@@ -30,7 +30,7 @@ body {
 
 h1,
 h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .text-wrapper {
@@ -48,7 +48,6 @@ h2 {
   -moz-box-shadow: 0 8px 6px -6px #12fcd8;
   box-shadow: 0 8px 6px -6px #12fcd8;
 }
-
 #header .nav-flex {
   display: flex;
   flex-direction: row;
@@ -60,39 +59,32 @@ h2 {
   padding: 0;
   margin: 0;
 }
-
 #menu li {
   display: inline-block;
   font-size: 24px;
   padding: 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 #menu a {
   text-decoration: none;
   color: #fff;
 }
-
 #menu a:hover {
   color: #12fcd8;
 }
-
 #menu ul:last-child {
   margin-right: 72px;
 }
-
 #menu a::before {
   transition: 300ms;
   height: 5px;
   content: "";
   position: absolute;
 }
-
 #menu a::before {
   width: 0;
   bottom: 10px;
 }
-
 #menu a:hover::before {
   width: 100%;
 }
@@ -138,7 +130,6 @@ h2 {
     background-position: 0 47%;
   }
 }
-
 @-moz-keyframes glowLines {
   0% {
     background-position: 0 47%;
@@ -150,7 +141,6 @@ h2 {
     background-position: 0 47%;
   }
 }
-
 @keyframes glowLines {
   0% {
     background-position: 0 47%;
@@ -162,7 +152,6 @@ h2 {
     background-position: 0 47%;
   }
 }
-
 .circle {
   width: 100%;
   height: 100%;
@@ -188,7 +177,6 @@ h2 {
     transform: scale(0.3);
   }
 }
-
 /* ----------MAIN-CONTENT-INFO------------- */
 .lines {
   position: absolute;
@@ -263,7 +251,6 @@ h2 {
     top: 110%;
   }
 }
-
 @keyframes drop {
   0% {
     top: -50%;
@@ -272,7 +259,6 @@ h2 {
     top: 110%;
   }
 }
-
 /* about section styling */
 .intro-head span:hover {
   animation: bounce 3s both ease-in-out infinite;
@@ -283,11 +269,7 @@ h2 {
 }
 
 @keyframes bounce {
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
+  0%, 100%, 20%, 50%, 80% {
     -webkit-transform: translateY(0);
     -ms-transform: translateY(0);
     transform: translateY(0);
@@ -303,7 +285,6 @@ h2 {
     transform: translateY(-12px);
   }
 }
-
 .main-flex {
   display: flex;
   flex-flow: row wrap;
@@ -316,28 +297,25 @@ h2 {
   margin-left: 12%;
   z-index: 3;
 }
-
 .intro-head p {
   font-size: 2.1875em;
   color: #d8d0d0;
   margin-top: 10px;
   margin-bottom: 20px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
 .intro-head h1 {
   font-size: 3.75em;
   color: #fff;
 }
-
-.intro-head button {
+.intro-head a {
   border: none;
+  color: #000;
   background: #12fcd8;
   padding: 0.7em 1.6em;
   border-radius: 5px 25px;
 }
-
-.intro-head button:hover {
+.intro-head a:hover {
   color: #000;
   background-color: #fff;
   -webkit-box-shadow: 0 8px 6px -6px #12fcd8;
@@ -354,7 +332,6 @@ h2 {
   margin-bottom: 5%;
   z-index: 10;
 }
-
 .image-self img {
   max-width: 400px;
 }
@@ -382,7 +359,6 @@ h2 {
   background: #201e1e;
   box-shadow: inset -2px -2px 2px #fff, inset 1px 1px 1px #fff;
 }
-
 .social-icon i:hover {
   box-shadow: inset -3px -3px 7px #12fcd8, inset 3px 3px 5px #12fcd8;
   color: #000;
@@ -398,7 +374,6 @@ h2 {
   left: 50%;
   bottom: 3%;
 }
-
 .arrow i:hover {
   transform: scale(1.2);
 }
@@ -408,6 +383,7 @@ h2 {
     flex-direction: column-reverse;
     justify-content: center;
   }
+
   .image-self {
     flex: 1 0 0;
     order: 1;
@@ -418,7 +394,6 @@ h2 {
     padding-left: 12%;
   }
 }
-
 /* ----------ABOUT ME SECTION------------- */
 #about-section {
   background-color: #013A6B;
@@ -434,13 +409,11 @@ h2 {
 .about-image-self {
   margin-left: 5%;
 }
-
 .about-image-self img {
   width: 350px;
   border-radius: 200px 50px 200px;
   transform: rotate(-10deg);
 }
-
 .about-image-self img:hover {
   filter: sepia(50%);
 }
@@ -456,10 +429,21 @@ h2 {
     flex-flow: column wrap;
     align-items: center;
   }
+
   .about-image-self img {
     width: 70vw;
     transform: rotate(0deg);
   }
+}
+#code-banner {
+  width: 100%;
+  height: 200px;
+  background-image: url("../image/code-green-unsplash.jpg");
+  z-index: 99;
+  opacity: 0.6;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* ----------SKILLS SECTION------------- */
@@ -494,7 +478,7 @@ h2 {
   font-size: 0.8em;
   background-color: #3f4042;
   padding: 2%;
-  opacity: 0.80;
+  opacity: 0.8;
   color: #fff;
 }
 
@@ -510,7 +494,7 @@ h2 {
   background-color: #3f4042;
   font-size: 0.8em;
   padding: 2%;
-  opacity: 0.80;
+  opacity: 0.8;
   color: #fff;
 }
 
@@ -525,7 +509,7 @@ h2 {
 .fa-database {
   font-size: 2.2em;
   position: absolute;
-  left: 30%;
+  left: 34%;
   top: -15%;
   background-color: #786f6f;
   padding: 0.75em;
@@ -549,6 +533,29 @@ ul.skill-list {
   color: #12fcd8;
 }
 
+.skill-language-div {
+  background-color: #fff;
+  opacity: 0.8;
+}
+.skill-language-div h3 {
+  color: #000;
+  text-align: center;
+  font-size: 1.6em;
+  padding: 3% 0 1%;
+  border-bottom: 2px solid #000;
+}
+.skill-language-div img {
+  width: 80px;
+}
+
+.language-flex {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  gap: 2%;
+  padding: 3%;
+}
+
 /* ----------FEATURED WORKS------------ */
 .feature-heading h2 {
   text-align: left;
@@ -567,11 +574,6 @@ ul.skill-list {
 .col-text {
   min-height: 20em;
   color: #fff;
-}
-
-.col img {
-  width: 500px;
-  padding-left: 15%;
 }
 
 .grid-flex {
@@ -598,11 +600,27 @@ ul.skill-list {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  padding-bottom: 6%;
 }
-
 .col h3 {
   padding: 4% 0;
   font-size: 1.5em;
+}
+.col img {
+  width: 100%;
+  padding-left: 10%;
+}
+.col a {
+  text-decoration: none;
+  margin: 5%;
+  background: #fff;
+  padding: 2% 4%;
+  text-align: center;
+  border-radius: 5px;
+  border: 2px solid red;
+}
+.col p {
+  margin-bottom: 6%;
 }
 
 .col-left {
@@ -626,7 +644,6 @@ ul.skill-list {
     padding-left: 0;
   }
 }
-
 @media (max-width: 750px) {
   .grid-flex {
     display: flex;
@@ -634,23 +651,26 @@ ul.skill-list {
     flex-direction: column;
     align-items: center;
   }
+
   .col-left {
     -webkit-box-ordinal-group: 0;
     -ms-flex-order: 0;
     order: 0;
   }
+
   .col-text div p {
     padding: 1em;
   }
+
   .aligner-item {
     width: 100%;
   }
+
   .col img {
     width: 100%;
     padding: 2%;
   }
 }
-
 /* ----------CONTACT FORM------------- */
 #contact-section {
   background-color: #013A6B;
@@ -681,11 +701,9 @@ ul.skill-list {
   float: right;
   width: 450px;
 }
-
 .contact-frame span {
   display: block;
 }
-
 .contact-frame p {
   margin: 5% 0;
   font-size: 1.4em;
@@ -762,7 +780,7 @@ form .form-row .textarea {
   width: 100%;
 }
 
-.form-btn input[type="submit"] {
+.form-btn input[type=submit] {
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
@@ -776,8 +794,7 @@ form .form-row .textarea {
   background-color: #1d1d1d;
   color: #12fcd8;
 }
-
-.form-btn input[type="submit"]:hover {
+.form-btn input[type=submit]:hover {
   transform: scale(1.1);
 }
 
@@ -785,8 +802,9 @@ form .form-row .textarea {
   .container .text {
     font-size: 20px;
   }
+
   .input-data input,
-  .textarea textarea {
+.textarea textarea {
     display: block;
     width: 100%;
     height: 100%;
@@ -794,23 +812,27 @@ form .form-row .textarea {
     font-size: 17px;
     background: #fff;
   }
+
   .container form {
-    padding: 10px auto;
+    padding: 10px;
   }
+
   .container form .form-row {
     display: block;
   }
-  .container form .form-row input[type="email"] {
+
+  .container form .form-row input[type=email] {
     margin: 15px 0;
   }
+
   .row-block {
     margin-top: 15px;
   }
+
   .submit-btn .input-data {
     width: 40% !important;
   }
 }
-
 .contact-heading h2 {
   text-align: right;
   font-size: 3em;
@@ -823,28 +845,28 @@ form .form-row .textarea {
   justify-content: space-evenly;
   padding-bottom: 4%;
 }
-
 .icons a i {
   font-size: 3em;
   color: #12fcd8;
 }
+.icons a i:hover {
+  transform: scale(1.2);
+}
 
 @media (max-width: 572px) {
   .contact-heading h2,
-  .feature-heading h2,
-  .skill-heading h2 {
+.feature-heading h2,
+.skill-heading h2 {
     text-align: center;
     padding: 8% 0;
     font-size: 2.5em;
   }
 }
-
 @media (max-width: 513px) {
   .social-icon {
     display: none;
   }
 }
-
 /* ----------FOOTER------------- */
 #footer {
   clear: both;
@@ -862,7 +884,7 @@ form .form-row .textarea {
   order: -1;
   flex: 5 50%;
   padding: 3em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #fff;
 }
 
@@ -876,7 +898,7 @@ form .form-row .textarea {
   display: inline-block;
   font-size: 24px;
   padding: 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .menu-footer a {
@@ -905,6 +927,7 @@ i:hover {
   .menu-footer {
     display: none;
   }
+
   #menu {
     display: none;
     background-color: #000;
@@ -919,19 +942,23 @@ i:hover {
     display: block;
     border-bottom: 1px solid #fff;
   }
+
   #mob-exit {
     display: block;
     z-index: 999;
   }
+
   #ham-btn-cta {
     display: block;
   }
+
   .hamburger {
     flex: 1 1 0;
     font-size: 2.5em;
     text-align: right;
     padding: 0.5em;
   }
+
   .fa-times-circle {
     display: block;
     font-size: 2em;
@@ -939,28 +966,32 @@ i:hover {
     text-align: left;
   }
 }
-
 @media screen and (max-width: 1160px) {
   .wrap {
     justify-content: center;
     padding: 5%;
   }
+
   .container {
     max-width: 90%;
   }
+
   .contact-frame {
     margin-bottom: 5%;
   }
 }
-
 @media screen and (max-width: 554px) {
   .skill-flex {
     justify-content: center;
   }
+
   h2 {
     text-align: center;
   }
+
   .front-container {
     margin: 15% 0;
   }
 }
+
+/*# sourceMappingURL=styles.css.map */
