--- a/css/styles.compact.css
+++ b/css/styles.compact.css
@@ -181,9 +181,9 @@ ul.skill-list { margin: 0; }
 
 .skill-language-div h3 { color: #000; text-align: center; font-size: 1.6em; padding: 3% 0 1%; border-bottom: 2px solid #000; }
 
-.skill-language-div img { width: 80px; }
+.language-flex { display: flex; flex-flow: row wrap; align-items: center; gap: 3%; padding: 3%; }
 
-.language-flex { display: flex; flex-flow: row wrap; align-items: center; gap: 2%; padding: 3%; }
+.language-flex img { width: 80px; margin: 0.6em; }
 
 /* ----------FEATURED WORKS------------ */
 .feature-heading h2 { text-align: left; font-size: 3em; padding: 1em; color: #12fcd8; }
@@ -203,7 +203,9 @@ ul.skill-list { margin: 0; }
 
 .col img { width: 100%; padding-left: 10%; }
 
-.col a { text-decoration: none; margin: 5%; background: #fff; padding: 2% 4%; text-align: center; border-radius: 5px; border: 2px solid red; }
+.col a { text-decoration: none; margin: 5%; background: #fff; padding: 2% 4%; text-align: center; border-radius: 8px; border: 4px solid #555; }
+
+.col a:hover { color: #000; }
 
 .col p { margin-bottom: 6%; }
 
