--- a/css/styles.scss
+++ b/css/styles.scss
@@ -584,16 +584,19 @@ ul.skill-list {
     border-bottom: 2px solid #000;
   }
 
-  img{
-    width: 80px;
-  }
+
 }
 .language-flex{
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  gap:2%;
+  gap:3%;
   padding: 3%;
+  img{
+    width:80px;
+margin: 0.6em;
+  }
+
 }
 
 /* ----------FEATURED WORKS------------ */
@@ -643,9 +646,11 @@ ul.skill-list {
   flex: 1;
   padding-bottom: 6%;
 
+
   h3{
     padding: 4% 0;
     font-size: 1.5em;
+
   }
 
   img {
@@ -657,9 +662,13 @@ ul.skill-list {
     margin: 5% ;
     background: #fff;
     padding: 2% 4%;
- text-align: center;
-    border-radius: 5px;
-    border: 2px solid red;
+    text-align: center;
+    border-radius: 8px;
+    border: 4px solid #555;
+
+    &:hover{
+      color: #000;
+    }
   }
   p{
     margin-bottom: 6%;
@@ -676,6 +685,7 @@ ul.skill-list {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .aligner-item {
