--- a/css/styles.compact.css
+++ b/css/styles.compact.css
@@ -136,6 +136,10 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
   .image-self { flex: 1 0 0; order: 1; z-index: 3; }
   .image-self img { width: 100vw; padding-left: 12%; } }
 
+@media screen and (max-width: 498px) { .intro-head h1 { font-size: 3.5em; }
+  .image-self { flex: 1 0 0; order: 1; z-index: 3; }
+  .image-self img { width: 100vw; padding: 5%; } }
+
 /* ----------ABOUT ME SECTION------------- */
 #about-section { background-color: #013A6B; background-image: -webkit-linear-gradient(-30deg, #1d1d1d 50%, #222 50%); }
 
