--- a/css/styles.scss
+++ b/css/styles.scss
@@ -432,6 +432,24 @@ position: sticky;
     }
   }
 }
+
+
+@media screen and (max-width:498px) {
+.intro-head h1{
+  font-size: 3.5em;
+}
+
+  .image-self {
+    flex: 1 0 0;
+    order: 1;
+    z-index: 3;
+
+    img {
+      width: 100vw;
+      padding: 5%;
+    }
+  }
+}
 /* ----------ABOUT ME SECTION------------- */
 #about-section {
   background-color: #013A6B;
@@ -685,7 +703,7 @@ margin: 0.6em;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .aligner-item {
